# Cancer-Detection

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: dev_publication.md
src/: main.py  requirements.txt
src/MRI/: main.py
src/MRI/ANN/: ANN.py  __init__.py  trainingplot.py
src/MRI/utils/: SVM.py  __init__.py  debug.py  loader.py
src/Wisconsin_Dataset/: ANN_TEST_DATA.csv  ANN_TRAIN_DATA.csv  NeuralNet.py  SK_ANN.py  SK_SVM.py  SVM_TEST_DATA.csv  SVM_TRAIN_DATA.csv  requirements.txt
src/Wisconsin_Dataset/utils/: __init__.py  cmatrix.py  dataset.py  sample.py
src/cancer/: ANN.py  SVM.py  __init__.py  classifiy.py  debug.py  loader.py  main.py  trainingplot.py
src/cancer/logs/scalars/20191110-072518/: events.out.tfevents.1573395920.Alpha-Arch.130644.1648.v2
src/cancer/logs/scalars/20191110-203535/: events.out.tfevents.1573443337.ALPHA.7564.1648.v2
src/cancer/logs/scalars/20191110-211254/: events.out.tfevents.1573445576.ALPHA.15840.1648.v2
src/cancer/logs/scalars/20191110-211700/: events.out.tfevents.1573445822.ALPHA.11400.1648.v2
src/cancer/logs/scalars/20191110-211905/: events.out.tfevents.1573445948.ALPHA.9184.1648.v2
src/cancer/logs/scalars/20191110-212108/: events.out.tfevents.1573446070.ALPHA.6304.1648.v2
src/cancer/logs/scalars/20191110-212238/: events.out.tfevents.1573446160.ALPHA.16856.1648.v2
src/cancer/logs/scalars/20191110-212347/: events.out.tfevents.1573446229.ALPHA.1876.1648.v2
src/examples/: linear_classifier_svm.py
(+85 files in other folders)
