[tool.poetry]
name = "cancer"
version = "0.1.0"
description = ""
authors = ["Joshua Arulsamy <joshua.gf.arul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
# tensorflow = "^2.0"

keras = "^2.3"
tflearn = "^0.3.2"
scipy = "^1.3"
numpy = "^1.17"
opencv-python = "^4.1"
pillow = "^6.2"
psutil = "^5.6"
pydot = "^1.4"
[tool.poetry.dev-dependencies]
pytest = "^3.0"
pycodestyle = "^2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
